# new-york-taxi-trips

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
configs/: main.ini
dbt/: dbt_project.yml  profiles.yml
dbt/models/staging/new_york_taxi_trips/: stg_nytt__tlc_yellow_trips_2015.sql
dbt/models/staging/new_york_taxi_trips/base/: base_nytt__tlc_yellow_trips_2015.sql  schema.yml
models/staging/new_york_taxi_trips/: stg_new_york_taxi_trips__tlc_yellow_trips_2015.sql  stg_nytt__tlc_yellow_trips_2015.sql
models/staging/new_york_taxi_trips/base/: base_new_york_taxi_trips__tlc_yellow_trips_2015.sql
requirements/: dev.txt  main.txt
src/: config.py
